<resources>
    <string name="app_name">Catálogo de Productos</string>
    <string name="facebook_app_id">YOUR_APP_ID</string>
    <string name="fb_login_protocol_scheme">YOUR_THING</string>
    <string name="canada">Canada</string>
    <string name="estados_unidos">Estados Unidos</string>
    <string name="marcas_privadas">Marcas privadas</string>
    <string name="txt_europa">Europa</string>
    <string name="todo">TODO</string>
    <string name="sku">SKU: 20001468</string>
    <string name="descripcion">Descripción: Nat Sherman Assortment Bx/6 </string>
    <string name="buscador">Buscador</string>
    <string name="title_activity_detalle_scrolling">Detalle</string>
    <string name="action_settings">Settings</string>
    <string name="sport">sport</string>
    <string name="sportperson">We play sports, we watch sports, and we talk about it, Cricketer, Footballer, If you are a sportsperson then bonjour is a nice place for you !></string>
    <string name="sportpersoning">SPORTSPERSON</string>
    <string name="fases">Fases</string>
    <string name="estructura">Estruct.</string>
    <string name="estructuraLand">Estructura</string>
    <string name="concat_sku">SKU:</string>
    <string name="finalVistas">Final</string>
    <string name="siguiente">Siguiente</string>
    <string name="salir">Salir</string>
    <string name="ssid">\"Davidoff-Corp\"</string>
    <string name="sin_internet">Sin internet.</string>
    <string name="no_wifi">Conectese a la red Wifi.</string>
    <string name="no_coorporativa">Conectese a la red Wifi Coorporativa.</string>
    <string name="sin_productos">Sin existencia de productos.</string>
    <string name="sin_respuesta">Por favor intente en otro momento.</string>
    <string name="region_eeuu">eeuu</string>
    <string name="region_privada">privada</string>
    <string name="region_canada">camada</string>
    <string name="region_europa">europa</string>
    <string name="error_500">Internal Server Error</string>
    <string name="deformed_data">No se pudo procesar la data. Notifique al soporte de ICT.</string>
    <string name="title_descripcion">Descripción</string>
    <string name="title_codigo">Código</string>
    <string name="no_te_emociones">No te emociones</string>
    <string name="nav_header_subtitle">Departamento ICT HN\nAgroindustrias Diadema Zona Franca Honduras S.A.</string>

</resources>