<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="48dp"
        android:background="@color/icons"
        app:layout_constraintBottom_toTopOf="@+id/tv_Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <ImageView
        android:id="@+id/iv_Component"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/sport"
        android:src="@mipmap/soccerball"
        app:layout_constraintBottom_toTopOf="@+id/tv_Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/tv_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/sportpersoning"
        android:textAlignment="center"
        android:textColor="#b55545"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@+id/iv_Component"
        tools:layout_editor_absoluteX="16dp" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/tv_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:paddingEnd="24dp"
                android:text="@string/sportperson"
                android:textAlignment="textStart"
                android:textColor="#ffffff"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_Title"
                app:layout_constraintVertical_bias="0.0" />
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>