<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EstructuraScrollingActivity"
    tools:ignore="PrivateResource"
    tools:showIn="@layout/activity_estructura_scrolling">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contenedorPadreEstructura"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/progressBarEstructura"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/contenedorRecycleListEstructura"
            app:layout_constraintEnd_toEndOf="@+id/contenedorRecycleListEstructura"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/contenedorRecycleListEstructura"
            app:layout_constraintTop_toTopOf="@+id/contenedorRecycleListEstructura"
            app:layout_constraintVertical_bias="0.242" />

        <LinearLayout
            android:id="@+id/contenedorRecycleListEstructura"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_codigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:text="@string/title_codigo"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/txt_descripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="2dp"
                    android:text="@string/title_descripcion"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_list_estructura"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutAnimation="@anim/layout_animation_right_to_left"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/contenedorMensajeEstructura"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/contenedorRecycleListEstructura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <ImageView
                android:id="@+id/imagenMensajeEstructura"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/no_wifi" />

            <TextView
                android:id="@+id/tvMensajeEstructura"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/sin_internet"
                android:textAlignment="center"
                android:textColor="@color/color_sin_red"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>